svg overflow issue

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -46,6 +46,14 @@ body {
     margin: 0 20px;
     max-width: 400px; // padding: 0 10px 20px 10px;
 
+    .gren-chart-wrapper & {
+      margin: 0;
+
+      @include mq(phablet) {
+        margin: 0 20px;
+      }
+    }
+
     @include mq(phablet) {
         margin: 0 20px;
     }
@@ -147,6 +155,10 @@ body {
 
   			}
   	}
+
+    svg {
+      overflow: visible;
+    }
 
     .section-header {
       margin-top: 6px;
